@@ -9,6 +9,7 @@ TODO: document EV_TSTAMP_T
           also used (found via cpan tester service).
         - support a lot more "uncommon" compile time configurations,
           such as ev_embed enabled but ev_timer disabled.
+        - the linux aio backend is no longer compiled in by default.
 
 4.31 Fri Dec 20 21:58:29 CET 2019
 	- handle backends with minimum wait time a bit better by not
